exit to website feature added

--- a/pages/help.html
+++ b/pages/help.html
@@ -6,5 +6,6 @@
     <li><strong>ls</strong> - show files in current directory</li>
     <li><strong>history</strong> - see your command history</li>
     <li><strong>clear</strong> - clear current window</li>
+    <li><strong>exit</strong> - To return back to website</li>
   </ul>
 </div>
